Fixed background extra white space

--- a/omok.css
+++ b/omok.css
@@ -10,7 +10,7 @@
 	background-size: cover;
 	height: 100%;
 	left: 0px;
-	position: absolute;
+	position: fixed;
 	top: 0px;
 	width: 100%;
 	z-index: -1;
@@ -64,8 +64,6 @@
 	width: 219px;
 }
 
-#label-menu {}
-
 #label-newgame {}
 
 #label-white {
@@ -112,9 +110,9 @@
 	border-radius: 36px;
 	-moz-border-radius: 36px;
 	-webkit-border-radius: 36px;
-	box-shadow:         inset 0 0 8px #808080, 0px 0px 10px 1px #000;
-	-moz-box-shadow:    inset 0 0 8px #808080, 0px 0px 10px 1px #000;
-	-webkit-box-shadow: inset 0 0 8px #808080, 0px 0px 10px 1px #000;
+	box-shadow:         inset 0 0 8px #808080, 0px 0px 9px 1px #000;
+	-moz-box-shadow:    inset 0 0 8px #808080, 0px 0px 9px 1px #000;
+	-webkit-box-shadow: inset 0 0 8px #808080, 0px 0px 9px 1px #000;
 	height: 36px;
 	margin: 2px 2px;
 	position: absolute;
@@ -131,9 +129,9 @@
 	border-radius: 			36px;
 	-moz-border-radius: 	36px;
 	-webkit-border-radius: 	36px;
-	box-shadow:         inset 0 0 8px #808080, 0px 0px 10px 1px #000;
-	-moz-box-shadow:    inset 0 0 8px #808080, 0px 0px 10px 1px #000;
-	-webkit-box-shadow: inset 0 0 8px #808080, 0px 0px 10px 1px #000;
+	box-shadow:         inset 0 0 8px #808080, 0px 0px 9px 1px #000;
+	-moz-box-shadow:    inset 0 0 8px #808080, 0px 0px 9px 1px #000;
+	-webkit-box-shadow: inset 0 0 8px #808080, 0px 0px 9px 1px #000;
 	height: 36px;
 	margin: 2px 2px;
 	position: absolute;
